[metadata]
name = switchbot-hub
version = attr: switchbot_hub.constant.VERSION
license = file: LICENSE
summary = SwitchBot controll program with GCP IoT Core.
descriptions = This application controll SwitchBot with BLE. This application connect to GCP Cloud IoT Core
platform = linux


[options]
install_requires =
    inject
    paho-mqtt
    pycparser
    PyJWT
    ConfigArgParse
    asn1crypto
    cffi
    cryptography
    idna
    six
    Adafruit-BluefruitLE

[options.extras_require]
develop =
    tests

[options.entry_points]
console_scripts =
    switch-bot = switchbot_hub.main:main
